[tool.poetry]
name = "bot"
version = "3.0.0"
packages = [
    { include = "bot", from = "python/operator" },
    { include = "bot", from = "python/user" },
]
description = "Dabl Chat"
authors = ["Daml Hub Team <no-reply@digitalasset.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
